cleaning: removing not used files

--- a/notebooks/mock_data_generator.ipynb
+++ b/notebooks/mock_data_generator.ipynb
@@ -17,31 +17,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "# Configuration for mock data\n",
-    "databases = ['db1', 'db2']\n",
-    "analysis_types = ['analysis1', 'analysis2']\n",
-    "columns_to_analyse = ['column1', 'column2']\n",
-    "agg_functions = ['sum', 'mean']\n",
-    "references = ['ref1', 'ref2']\n",
-    "grouppings = ['all', 'group1', 'group2']\n",
-    "targets = ['RP_total', 'MP']\n",
+    "databases = [\"db1\", \"db2\"]\n",
+    "analysis_types = [\"analysis1\", \"analysis2\"]\n",
+    "columns_to_analyse = [\"column1\", \"column2\"]\n",
+    "agg_functions = [\"sum\", \"mean\"]\n",
+    "references = [\"ref1\", \"ref2\"]\n",
+    "grouppings = [\"all\", \"group1\", \"group2\"]\n",
+    "targets = [\"RP_total\", \"MP\"]\n",
     "\n",
     "# Parameters for log-normal distribution\n",
-    "mu_y = 2       # Mean of the underlying normal distribution for 'y'\n",
+    "mu_y = 2  # Mean of the underlying normal distribution for 'y'\n",
     "sigma_y = 0.5  # Standard deviation of the underlying normal distribution for 'y'\n",
     "\n",
-    "mu_var_y = 1.5     # Mean for 'var_y'\n",
+    "mu_var_y = 1.5  # Mean for 'var_y'\n",
     "sigma_var_y = 0.4  # Standard deviation for 'var_y'\n",
     "\n",
     "num_points = 100  # Number of data points\n",
     "num_categories = 3  # Number of categories per group1 and group2\n",
+    "\n",
     "\n",
     "# Function to slightly vary 'y' values\n",
     "def vary_y(y_values, variation_factor=0.1):\n",
@@ -68,98 +66,106 @@
     "                                \"agg\": agg,\n",
     "                                \"ref\": ref,\n",
     "                                \"group\": group,\n",
-    "                                \"target\": target\n",
+    "                                \"target\": target,\n",
     "                            }\n",
     "                            key = key_generator(params, preserve_types=True)\n",
     "\n",
-    "                            if group == 'all':\n",
+    "                            if group == \"all\":\n",
     "                                # Generate log-normal distributed y values\n",
     "                                y_values = np.random.lognormal(mean=mu_y, sigma=sigma_y, size=num_points)\n",
     "                                var_y_values = np.random.lognormal(mean=mu_var_y, sigma=sigma_var_y, size=num_points)\n",
     "                                x_values = np.arange(1, num_points + 1)\n",
-    "                                group_labels = ['all'] * num_points\n",
+    "                                group_labels = [\"all\"] * num_points\n",
     "\n",
-    "                                df = pd.DataFrame({\n",
-    "                                    'x': x_values,\n",
-    "                                    'y': y_values,\n",
-    "                                    'var_y': var_y_values,\n",
-    "                                    'group': group_labels\n",
-    "                                })\n",
+    "                                df = pd.DataFrame(\n",
+    "                                    {\"x\": x_values, \"y\": y_values, \"var_y\": var_y_values, \"group\": group_labels}\n",
+    "                                )\n",
     "\n",
     "                                # dfh should have the same x as df\n",
     "                                # We'll create a \"histogram-like\" distribution by just generating random y-values\n",
-    "                                dfh = pd.DataFrame({\n",
-    "                                    'x': df['x'],\n",
-    "                                    'y': np.random.rand(num_points) * np.mean(y_values)  # Random \"histogram-like\" values\n",
-    "                                })\n",
+    "                                dfh = pd.DataFrame(\n",
+    "                                    {\n",
+    "                                        \"x\": df[\"x\"],\n",
+    "                                        \"y\": np.random.rand(num_points)\n",
+    "                                        * np.mean(y_values),  # Random \"histogram-like\" values\n",
+    "                                    }\n",
+    "                                )\n",
     "\n",
     "                                # dfhg: columns x, y, group\n",
     "                                # Same groups as df (just \"all\" in this case), and random histogram per group\n",
-    "                                dfhg = pd.DataFrame({\n",
-    "                                    'x': df['x'],\n",
-    "                                    'group': df['group']\n",
-    "                                })\n",
-    "                                dfhg['y'] = np.random.rand(num_points) * np.mean(y_values)  # random histogram-like values per group\n",
+    "                                dfhg = pd.DataFrame({\"x\": df[\"x\"], \"group\": df[\"group\"]})\n",
+    "                                dfhg[\"y\"] = np.random.rand(num_points) * np.mean(\n",
+    "                                    y_values\n",
+    "                                )  # random histogram-like values per group\n",
     "\n",
     "                                # Assign DataFrames to the nested dictionary\n",
     "                                data_dict[key] = {\n",
-    "                                    'df': df.to_json(orient='split'),\n",
-    "                                    'dfh': dfh.to_json(orient='split'),\n",
-    "                                    'dfhg': dfhg.to_json(orient='split')\n",
+    "                                    \"df\": df.to_json(orient=\"split\"),\n",
+    "                                    \"dfh\": dfh.to_json(orient=\"split\"),\n",
+    "                                    \"dfhg\": dfhg.to_json(orient=\"split\"),\n",
     "                                }\n",
     "                            else:\n",
     "                                # For group1 and group2, create multiple categories\n",
     "                                # Start with the 'all' group data\n",
     "                                y_values_all = np.random.lognormal(mean=mu_y, sigma=sigma_y, size=num_points)\n",
-    "                                var_y_values_all = np.random.lognormal(mean=mu_var_y, sigma=sigma_var_y, size=num_points)\n",
+    "                                var_y_values_all = np.random.lognormal(\n",
+    "                                    mean=mu_var_y, sigma=sigma_var_y, size=num_points\n",
+    "                                )\n",
     "                                x_values_all = np.arange(1, num_points + 1)\n",
     "\n",
-    "                                df_all = pd.DataFrame({\n",
-    "                                    'x': x_values_all,\n",
-    "                                    'y': y_values_all,\n",
-    "                                    'var_y': var_y_values_all,\n",
-    "                                    'group': ['all'] * num_points\n",
-    "                                })\n",
+    "                                df_all = pd.DataFrame(\n",
+    "                                    {\n",
+    "                                        \"x\": x_values_all,\n",
+    "                                        \"y\": y_values_all,\n",
+    "                                        \"var_y\": var_y_values_all,\n",
+    "                                        \"group\": [\"all\"] * num_points,\n",
+    "                                    }\n",
+    "                                )\n",
     "\n",
     "                                # Create multiple categories by varying 'y' values\n",
     "                                category_dfs = []\n",
     "                                categories = []\n",
     "                                for cat_num in range(1, num_categories + 1):\n",
     "                                    df_cat = df_all.copy()\n",
-    "                                    df_cat['y'] = vary_y(df_cat['y'], variation_factor=0.1)  # Vary 'y' by 10%\n",
-    "                                    df_cat['group'] = f'category{cat_num}'\n",
+    "                                    df_cat[\"y\"] = vary_y(df_cat[\"y\"], variation_factor=0.1)  # Vary 'y' by 10%\n",
+    "                                    df_cat[\"group\"] = f\"category{cat_num}\"\n",
     "                                    category_dfs.append(df_cat)\n",
-    "                                    categories.append(f'category{cat_num}')\n",
+    "                                    categories.append(f\"category{cat_num}\")\n",
     "\n",
     "                                # Concatenate all categories\n",
     "                                df_final = pd.concat(category_dfs, ignore_index=True)\n",
     "\n",
-    "                                # dfh should have same x as df (here we have multiple categories but we can use the same approach)\n",
+    "                                # dfh should have same x as df (here we have multiple categories\n",
+    "                                # but we can use the same approach)\n",
     "                                # Let's just take unique x from df_final (they are all the same)\n",
-    "                                unique_x = df_final['x'].unique()\n",
-    "                                dfh = pd.DataFrame({\n",
-    "                                    'x': unique_x,\n",
-    "                                    'y': np.random.rand(len(unique_x)) * np.mean(y_values_all)  # Random histogram-like values\n",
-    "                                })\n",
+    "                                unique_x = df_final[\"x\"].unique()\n",
+    "                                dfh = pd.DataFrame(\n",
+    "                                    {\n",
+    "                                        \"x\": unique_x,\n",
+    "                                        \"y\": np.random.rand(len(unique_x))\n",
+    "                                        * np.mean(y_values_all),  # Random histogram-like values\n",
+    "                                    }\n",
+    "                                )\n",
     "\n",
-    "                                # dfhg: we want columns x, y, group with same groups as df_final, and random hist per group\n",
+    "                                # dfhg: we want columns x, y, group with same groups as df_final,\n",
+    "                                # and random hist per group\n",
     "                                dfhg_list = []\n",
-    "                                for grp in df_final['group'].unique():\n",
-    "                                    grp_df = pd.DataFrame({\n",
-    "                                        'x': unique_x,\n",
-    "                                        'group': grp,\n",
-    "                                        'y': np.random.rand(len(unique_x)) * np.mean(y_values_all)\n",
-    "                                    })\n",
+    "                                for grp in df_final[\"group\"].unique():\n",
+    "                                    grp_df = pd.DataFrame(\n",
+    "                                        {\n",
+    "                                            \"x\": unique_x,\n",
+    "                                            \"group\": grp,\n",
+    "                                            \"y\": np.random.rand(len(unique_x)) * np.mean(y_values_all),\n",
+    "                                        }\n",
+    "                                    )\n",
     "                                    dfhg_list.append(grp_df)\n",
     "                                dfhg = pd.concat(dfhg_list, ignore_index=True)\n",
     "\n",
-    "\n",
     "                            data_dict[key] = {\n",
-    "                                'df': df.to_json(orient='split'),\n",
-    "                                'dfh': dfh.to_json(orient='split'),\n",
-    "                                'dfhg': dfhg.to_json(orient='split')\n",
-    "                            }\n",
-    "\n"
+    "                                \"df\": df.to_json(orient=\"split\"),\n",
+    "                                \"dfh\": dfh.to_json(orient=\"split\"),\n",
+    "                                \"dfhg\": dfhg.to_json(orient=\"split\"),\n",
+    "                            }"
    ]
   },
   {
@@ -184,9 +190,9 @@
    ],
    "source": [
     "# Save the mock database to a JSON file\n",
-    "output_path = Path('../data/mock_database_new2.json')\n",
+    "output_path = Path(\"../data/mock_database_new2.json\")\n",
     "output_path.parent.mkdir(parents=True, exist_ok=True)  # Create directories if they don't exist\n",
-    "with open(output_path, 'w') as f:\n",
+    "with open(output_path, \"w\") as f:\n",
     "    json.dump(data_dict, f, indent=4)\n",
     "\n",
     "print(f\"Mock database generated and saved to {output_path}\")"
