--- a/notebooks/histogram_test.ipynb
+++ b/notebooks/histogram_test.ipynb
@@ -65,7 +65,7 @@
     "        q1, q3 = np.percentile(v_filtered, [25, 75])\n",
     "        iqr = q3 - q1\n",
     "        if iqr > 0:\n",
-    "            bin_width = 2 * iqr * (len(v_filtered) ** (-1/3))\n",
+    "            bin_width = 2 * iqr * (len(v_filtered) ** (-1 / 3))\n",
     "        else:\n",
     "            # If IQR=0, fallback to a default\n",
     "            data_range = v_filtered.max() - v_filtered.min()\n",
@@ -126,9 +126,10 @@
     "        h, x = np.histogram(v_filtered, bins=bins)\n",
     "        return h, x\n",
     "\n",
+    "\n",
     "# Example usage:\n",
-    "v = np.random.randint(0, 10,1000) # continuous\n",
-    "h, x = smart_histogram(v, categorical=True)\n"
+    "v = np.random.randint(0, 10, 1000)  # continuous\n",
+    "h, x = smart_histogram(v, categorical=True)"
    ]
   },
   {
@@ -180,7 +181,7 @@
    "source": [
     "import seaborn as sns\n",
     "\n",
-    "sns.barplot(x=x,y=h)"
+    "sns.barplot(x=x, y=h)"
    ]
   }
  ],
