--- a/notebooks/icon_creator.ipynb
+++ b/notebooks/icon_creator.ipynb
@@ -30,13 +30,14 @@
     "        img = Image.open(input_image_path)\n",
     "\n",
     "        # Convert and save as ICO\n",
-    "        img.save(output_ico_path, format='ICO', sizes=sizes)\n",
+    "        img.save(output_ico_path, format=\"ICO\", sizes=sizes)\n",
     "        print(f\"Successfully saved ICO file at {output_ico_path}\")\n",
     "    except Exception as e:\n",
     "        print(f\"An error occurred: {e}\")\n",
     "\n",
+    "\n",
     "if __name__ == \"__main__\":\n",
-    "    input_path = \"../images/logodirect.png\"   # Replace with your image path\n",
+    "    input_path = \"../images/logodirect.png\"  # Replace with your image path\n",
     "    output_path = \"../images/icondirect.ico\"  # Replace with desired ICO path\n",
     "    convert_to_ico(input_path, output_path)"
    ]
